modificação html/ css/ img

--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
 
         <div class="projetos" id="projetos" >
             <div class="trabalhos">
-                <a href="https://effulgent-valkyrie-1591b3.netlify.app/">
+                <a href="https://a-fazeres.netlify.app/">
                     <img class="img" src="./img/print to-do list.png.jpg">
                 </a>
             </div>
 
             <div class="trabalhos">
-                <a href="https://slide-animado.netlify.app/">
-                <img  class="img2" src="./img/capture slide.png">
+                <a href="https://site-e-comerce.netlify.app/">
+                <img  class="img2" src="./img/print e-comerce.png">
             </a>
             </div>
 
