alteracoes  html/ css

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
             </div>
 
             <div class="trabalhos">
-                <a href="https://site-e-comerce.netlify.app/">
-                <img  class="img2" src="./img/print e-comerce.png">
+                <a href="https://prevision-temp.netlify.app/">
+                <img  class="img2" src="./img/capitura-previsao.png">
             </a>
             </div>
 
